# git-webhook

./: .env.example  .gitignore  README.md  commands  commands.md  pyproject.toml  some.txt
app/: __init__.py  bot_detection.py  config.py  database.py  main.py  models.py  normalizers.py  print_test_instructions.py  security.py
app/api/: __init__.py  dependencies.py
app/api/routes/: events.py  github_webhooks.py  jira_webhooks.py  metrics.py
app/core/: config.py  security.py
app/db/: base.py  database.py  models.py
app/integrations/: __init__.py
app/integrations/github/: __init__.py  bot_detection.py  normalizers.py  service.py
app/integrations/jira/: README.md  __init__.py  normalizers.py  service.py
docs/: .~lock.github-webhook-poc-deck.pptx#  clear_instructions.md  end_to_end_webhook_guide.md  github-webhook-poc-deck.md  github-webhook-poc-deck.pptx  github-webhook-poc-runbook.md  github_webhook_possibilities.md  org_wide_github_setup.md  response_interpretation_guide.md
docs/context/: project_context.md
docs/imp_docs/: github-webhook.md
docs/payload/: jira.json  payload_git.txt
reports/: events.json  summary.json
skills/project-context-updater/: SKILL.md
tests/: conftest.py  test_webhooks.py
webhook/: feature.txt  lorem.html  manoj.txt  sometext.txt
